# RhamaAI

./: .env.example  api.py  assistance.py  main.py  requirements.txt
.streamlit/: secrets.toml
rhama/: crew.py
rhama/crew_pipelines/: pipeline.py
rhama_crew/: README.md  pyproject.toml  report.md
rhama_crew/src/rhama_crew/: crew.py  main.py
