[tool.poetry]
name = "rhama_crew"
version = "0.1.0"
description = "rhama-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
rhama_crew = "rhama_crew.main:run"
run_crew = "rhama_crew.main:run"
train = "rhama_crew.main:train"
replay = "rhama_crew.main:replay"
test = "rhama_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
